--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oh My Nosh</title>
   <!-- Google tag (gtag.js) -->
-  <script async src="="https://www.googletagmanager.com/gtag/js?id=G-B4PP7QY7N8"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-B4PP7QY7N8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -75,7 +75,7 @@
       padding: 1rem;
       background-color: #ffeef4;
     }
-    input, select, textarea {
+    input, select {
       border: 1px solid #ccc;
       border-radius: 5px;
     }
@@ -132,25 +132,40 @@
     <h2>Gallery</h2>
 
     <h3>Cakes</h3>
-    <div class="gallery-grid" id="cakes-gallery"></div>
+    <div class="gallery-grid">
+      <img src="Cake1.jpg" alt="Cake 1">
+      <img src="Cake30.jpg" alt="Cake 30">
+    </div>
 
     <h3>Cookies</h3>
-    <div class="gallery-grid" id="cookies-gallery"></div>
+    <div class="gallery-grid">
+      <img src="Cookies1.jpg" alt="Cookies 1">
+    </div>
 
     <h3>Cupcakes</h3>
-    <div class="gallery-grid" id="cupcakes-gallery"></div>
+    <div class="gallery-grid">
+      <img src="Cupcake1.jpg" alt="Cupcake 1">
+    </div>
 
     <h3>Cake & Cookies</h3>
-    <div class="gallery-grid" id="cakecookies-gallery"></div>
+    <div class="gallery-grid">
+      <img src="Cake&Cookies1.jpg" alt="Cake and Cookies 1">
+    </div>
 
     <h3>Cake & Cupcakes</h3>
-    <div class="gallery-grid" id="cakecupcakes-gallery"></div>
+    <div class="gallery-grid">
+      <img src="Cake&Cupcakes1.jpg" alt="Cake and Cupcakes 1">
+    </div>
 
     <h3>Dessert Jars</h3>
-    <div class="gallery-grid" id="dessertjars-gallery"></div>
+    <div class="gallery-grid">
+      <img src="DessertJars1.jpg" alt="Dessert Jars 1">
+    </div>
 
     <h3>Cake Pops</h3>
-    <div class="gallery-grid" id="cakepops-gallery"></div>
+    <div class="gallery-grid">
+      <img src="CakePops1.jpg" alt="Cake Pops 1">
+    </div>
   </section>
 
   <section id="classes">
@@ -162,25 +177,19 @@
       <li>📍 Based in the general surrounds of Silvamonte, Johannesburg</li>
       <li>🚗 Additional travel costs may apply for locations further out</li>
     </ul>
+    <p>To find out more or to book a class, complete the form below or contact us!</p>
 
-    <h3>Book a Class</h3>
-    <form id="class-booking-form" onsubmit="event.preventDefault(); sendClassBooking();">
+    <form id="kids-class-form" onsubmit="event.preventDefault(); sendKidsClassForm();">
       <label for="parent-name">Your Name:</label><br>
       <input type="text" id="parent-name" name="parent-name" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
 
-      <label for="child-name">Child's Name:</label><br>
-      <input type="text" id="child-name" name="child-name" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
+      <label for="children-age">Children Age Group:</label><br>
+      <input type="text" id="children-age" name="children-age" placeholder="e.g. 4–6 years or 7–10 years" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
 
-      <label for="class-date">Preferred Date:</label><br>
-      <input type="date" id="class-date" name="class-date" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
+      <label for="preferred-day">Preferred Day or Time:</label><br>
+      <input type="text" id="preferred-day" name="preferred-day" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
 
-      <label for="num-children">Number of Children:</label><br>
-      <input type="number" id="num-children" name="num-children" min="1" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
-
-      <label for="class-notes">Any notes (optional):</label><br>
-      <textarea id="class-notes" name="class-notes" rows="3" style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"></textarea><br>
-
-      <button class="contact-button" type="submit">Send Booking via WhatsApp</button>
+      <button class="contact-button" type="submit">Send Class Enquiry via WhatsApp</button>
     </form>
   </section>
 
@@ -249,52 +258,21 @@
       window.open(`https://wa.me/${phone}?text=${encodedMessage}`, "_blank");
     }
 
-    function sendClassBooking() {
+    function sendKidsClassForm() {
       const parentName = document.getElementById('parent-name').value.trim();
-      const childName = document.getElementById('child-name').value.trim();
-      const classDate = document.getElementById('class-date').value;
-      const numChildren = document.getElementById('num-children').value;
-      const notes = document.getElementById('class-notes').value.trim();
+      const childrenAge = document.getElementById('children-age').value.trim();
+      const preferredDay = document.getElementById('preferred-day').value.trim();
 
-      if (!parentName || !childName || !classDate || !numChildren) {
-        alert("Please fill in all required fields.");
+      if (!parentName || !childrenAge || !preferredDay) {
+        alert("Please fill in all fields for the kids' class enquiry.");
         return;
       }
 
-      const formattedDate = new Date(classDate).toLocaleDateString("en-ZA", {
-        day: "numeric",
-        month: "long",
-        year: "numeric"
-      });
-
-      const message = `Hi! I'd like to book a Kids' Baking Class.\n\n👤 Parent: ${parentName}\n🧁 Child: ${childName}\n📅 Date: ${formattedDate}\n👶 Number of Children: ${numChildren}${notes ? `\n📝 Notes: ${notes}` : ""}`;
-
+      const message = `Hi! I'm ${parentName} and I'm interested in the kids' baking classes. My child's age group is ${childrenAge}, and we're available on ${preferredDay}. Can you send more info?`;
       const encodedMessage = encodeURIComponent(message);
       const phone = "27799750908";
+
       window.open(`https://wa.me/${phone}?text=${encodedMessage}`, "_blank");
-    }
-
-    function loadImages(prefix, containerId) {
-      const container = document.getElementById(containerId);
-      let i = 1;
-      while (true) {
-        const img = new Image();
-        img.src = `${prefix}${i}.jpg`;
-        img.onload = () => container.appendChild(img);
-        img.onerror = () => {};
-        i++;
-        if (i > 100) break; // safety cap
-      }
-    }
-
-    window.onload = function () {
-      loadImages('Cake', 'cakes-gallery');
-      loadImages('Cookies', 'cookies-gallery');
-      loadImages('Cupcake', 'cupcakes-gallery');
-      loadImages('Cake&Cookies', 'cakecookies-gallery');
-      loadImages('Cake&Cupcakes', 'cakecupcakes-gallery');
-      loadImages('DessertJars', 'dessertjars-gallery');
-      loadImages('CakePops', 'cakepops-gallery');
     }
   </script>
 </body>
