--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <label for="preferred-day">Preferred Day or Time:</label><br>
       <input type="text" id="preferred-day" name="preferred-day" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
 
-      <button class="contact-button" type="submit">Send Class Enquiry via WhatsApp</button>
+      <button class="contact-button" type="submit" data-event="class_form_submit">Send Class Enquiry via WhatsApp</button>
     </form>
   </section>
 
@@ -207,11 +207,12 @@
       <label for="order-date">Preferred Date:</label><br>
       <input type="date" id="order-date" name="order-date" required style="padding: 0.5rem; width: 100%; margin: 0.5rem 0;"><br>
 
-      <button class="contact-button" type="submit">Send Enquiry via WhatsApp</button>
+      <button class="contact-button" type="submit" data-event="order_form_submit">Send Enquiry via WhatsApp</button>
     </form>
 
-    <a class="contact-button" href="https://www.instagram.com/ohmynoshh">Instagram</a>
-    <a class="contact-button" href="https://www.facebook.com/share/1Eq7thDPyU/">Facebook</a>
+    <a class="contact-button" href="https://www.instagram.com/ohmynoshh" target="_blank" data-event="instagram_click">Instagram</a>
+    <a class="contact-button" href="https://www.facebook.com/share/1Eq7thDPyU/" target="_blank" data-event="facebook_click">Facebook</a>
+    <a class="contact-button" href="https://wa.me/27799750908" target="_blank" data-event="whatsapp_click">WhatsApp</a>
   </section>
 
   <footer>
@@ -241,6 +242,10 @@
       const phone = "27799750908";
 
       window.open(`https://wa.me/${phone}?text=${encodedMessage}`, "_blank");
+      gtag('event', 'order_form_submit', {
+        event_category: 'engagement',
+        event_label: product
+      });
     }
 
     function sendKidsClassForm() {
@@ -258,35 +263,23 @@
       const phone = "27799750908";
 
       window.open(`https://wa.me/${phone}?text=${encodedMessage}`, "_blank");
+      gtag('event', 'class_form_submit', {
+        event_category: 'engagement',
+        event_label: childrenAge
+      });
     }
 
-    // This function tries to load images and only adds them if they exist (onload fires)
-    function loadExistingImages(containerId, baseName, maxCount) {
-      const container = document.getElementById(containerId);
-      if (!container) return;
-
-      for(let i = 1; i <= maxCount; i++) {
-        const img = new Image();
-        img.src = `${baseName}${i}.jpg`;
-        img.alt = `${baseName} ${i}`;
-        img.onload = () => {
-          container.appendChild(img);
-        };
-        img.onerror = () => {
-          // Do nothing, image doesn't exist
-        };
+    // Event Tracking for social and WhatsApp links
+    document.querySelectorAll('[data-event]').forEach(el => {
+      if(el.tagName.toLowerCase() === 'a'){
+        el.addEventListener('click', () => {
+          gtag('event', el.dataset.event, {
+            event_category: 'engagement',
+            event_label: el.href
+          });
+        });
       }
-    }
-
-    window.onload = () => {
-      loadExistingImages('gallery-cakes', 'Cake', 50);
-      loadExistingImages('gallery-cookies', 'Cookies', 50);
-      loadExistingImages('gallery-cupcakes', 'Cupcake', 30);
-      loadExistingImages('gallery-cakecookies', 'Cake&Cookies', 20);
-      loadExistingImages('gallery-cakecupcakes', 'Cake&Cupcakes', 20);
-      loadExistingImages('gallery-dessertjars', 'DessertJars', 15);
-      loadExistingImages('gallery-cakepops', 'CakePops', 15);
-    };
+    });
   </script>
 </body>
 </html>
